(clawpack/swirlcons) Update .ini files

--- a/applications/clawpack/advection/2d/swirl_cons/example3.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example3.ini
@@ -3,8 +3,8 @@
 
     # the edge-velocity solver is the only that seems to be conservative with non-periodic
     # boundary conditions
-    rp-solver = 3    # 1-QS; 2-WD; 3=EC; 4=FW
-    mapping = 1      # 0-no map;  1-cart;  2-fivepatch
+    rp-solver = 2    # 1-QS; 2-WD; 3=EC; 4=FW
+    mapping = 0      # 0-no map;  1-cart;  2-fivepatch
 
     alpha = 0.5
 
@@ -13,7 +13,7 @@
     mx = 8	           # mx_leaf
     my = 8            # my_leaf
     mbc = 2           # Number of ghost cells
-    maux = 9
+    maux = 2
 
     # Equations and boundary conditions
     meqn = 1             # Number of equations
@@ -40,15 +40,15 @@
 
     use_fixed_dt = T     # Take a fixed time step
     initial_dt = 0.0625   # Initial time step for 'minlevel'
-    max_cfl = 1.0        # maximum cfl
-    desired_cfl = 1.0    # desired cfl
+    max_cfl = 2.0        # maximum cfl
+    desired_cfl = 2.0    # desired cfl
 
     outstyle = 3         # OutputStyle = 1,2,3
 
-    nout  = 10          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
+    nout  = 5          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
     nstep = 1            # Only used if outstyle is 3
 
-    subcycle = T         # subcycle in time ( = T or F).
+    subcycle = F         # subcycle in time ( = T or F).
     outstyle-uses-maxlevel = F
 
     # -------------------
@@ -97,11 +97,11 @@
 
 [clawpack46]
     order  = 2 2         # normal and transverse order
-    mcapa = 3            # mcapa
+    mcapa = 0            # mcapa
     src_term = 0         # src_term
 
     mwaves = 1           # mwaves
-    mthlim = 1           # mthlim (is a vector in general, with 'mwaves' entries)
+    mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
     # output
