--- a/applications/clawpack/advection/2d/swirl_cons/example3.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example3.ini
@@ -1,9 +1,9 @@
 [user]
-    example = 3 
+    example = 2 
 
     # the edge-velocity solver is the only that seems to be conservative with non-periodic
     # boundary conditions
-    rp-solver = 2    # 1-QS; 2-WD; 3=EC; 4=FW
+    rp-solver = 4    # 1-QS; 2-WD; 3=EC; 4=FW
     mapping = 0      # 0-no map;  1-cart;  2-fivepatch
 
     alpha = 0.5
@@ -26,8 +26,8 @@
     minlevel = 1         # Minimum level
     maxlevel = 2        # Maximum levels of refinement
 
-    regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
-    refine_threshold = 0.5
+    regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+    refine_threshold = 1.25
     coarsen_threshold = 0.25
 
     smooth-refine = F
@@ -39,17 +39,17 @@
     tfinal = 0.01         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     # Take a fixed time step
-    initial_dt = 0.0625   # Initial time step for 'minlevel'
-    max_cfl = 2.0        # maximum cfl
-    desired_cfl = 2.0    # desired cfl
+    initial_dt = 0.03125   # Initial time step for 'minlevel'
+    max_cfl = 1.0        # maximum cfl
+    desired_cfl = 1.0    # desired cfl
 
     outstyle = 3         # OutputStyle = 1,2,3
 
-    nout  = 5          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
+    nout  = 2          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
     nstep = 1            # Only used if outstyle is 3
 
     subcycle = F         # subcycle in time ( = T or F).
-    outstyle-uses-maxlevel = F
+    outstyle-uses-maxlevel = T
 
     # -------------------
     # File and console IO
@@ -78,22 +78,25 @@
     # -------
     # Mapping
     # -------
-    manifold = T         # Manifold
+    manifold = F         # Manifold
+
+    mi = 2
+    mj = 1
 
     # Domain dimensions - used only if manifold = F
     ax = 0
-    bx = 1
+    bx = 2
     ay = 0
     by = 1
 
     # Shift/scale box in [-1,1]x[-1,1] to [0,1]x[0,1]
-    scale = 0.5 0.5 0
-    shift = 0.5 0.5 0
+    # scale = 0.5 0.5 0
+    # shift = 0.5 0.5 0
 
-    periodic_x = F
-    periodic_y = F
+    periodic_x = T
+    periodic_y = T
 
-    init_ghostcell = T
+    init_ghostcell = F
 
 [clawpack46]
     order  = 2 2         # normal and transverse order
@@ -102,7 +105,7 @@
 
     mwaves = 1           # mwaves
     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
-    mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+    mthbc = 2 2 2 2      # mthbc (=left,right,bottom,top)
 
     # output
     ascii-out = T
