--- a/applications/clawpack/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/clawpack/euler/2d/shockbubble/fclaw_options.ini
@@ -32,7 +32,6 @@
 
 # Time stepping
      tfinal = 0.75          # Since we are not scaling the results
-     #initial_dt = 2.5e-3    # Initial time step for 'minlevel'
      initial_dt = 2.5e-3    # Initial time step for 'minlevel'
 
      use_fixed_dt = T            # Take a fixed time step
@@ -55,7 +54,7 @@
      # -----------
      # Tikz output 
      # -----------
-     tikz-out = T
+     tikz-out = F
      tikz-figsize = 4 1     # Each block is 1 in x 1 in ; Final figure is 4 in x 1 in
      tikz-plot-fig = T      # Set to true if you have figure 'plot_0000.png' available.
      tikz-plot-prefix = 'plot'
