--- a/applications/clawpack/advection/2d/swirl_cons/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl_cons/Makefile.am
@@ -8,6 +8,7 @@ applications_clawpack_advection_2d_swirl_cons_swirlcons_SOURCES = \
 	applications/clawpack/advection/2d/swirl_cons/swirlcons.cpp \
 	applications/clawpack/advection/2d/swirl_cons/fclaw2d_map_cart.c \
 	applications/clawpack/advection/2d/swirl_cons/fclaw2d_map_fivepatch.c \
+	applications/clawpack/advection/2d/swirl_cons/fclaw2d_map_bilinear.c \
 	applications/clawpack/advection/2d/swirl_cons/setprob.f \
 	applications/clawpack/advection/2d/swirl_cons/fdisc.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/qinit.f \
@@ -21,6 +22,7 @@ applications_clawpack_advection_2d_swirl_cons_swirlcons_SOURCES = \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2_cons_update.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpt2cons_manifold.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2cons_qs_manifold.f \
+	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2cons_fw_manifold.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2cons_ec_manifold.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2_cons_update_manifold.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/tag4coarsening.f \
