--- a/applications/clawpack/advection/2d/swirl_cons/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl_cons/Makefile.am
@@ -6,11 +6,13 @@ applications_clawpack_advection_2d_swirl_cons_swirlcons_SOURCES = \
 	applications/clawpack/advection/2d/swirl_cons/swirlcons_user.cpp \
 	applications/clawpack/advection/2d/swirl_cons/swirlcons_user.h \
 	applications/clawpack/advection/2d/swirl_cons/swirlcons.cpp \
+	applications/clawpack/advection/2d/swirl_cons/swirlcons_options.c \
 	applications/clawpack/advection/2d/swirl_cons/fclaw2d_map_cart.c \
 	applications/clawpack/advection/2d/swirl_cons/fclaw2d_map_fivepatch.c \
 	applications/clawpack/advection/2d/swirl_cons/fclaw2d_map_bilinear.c \
 	applications/clawpack/advection/2d/swirl_cons/setprob.f \
 	applications/clawpack/advection/2d/swirl_cons/fdisc.f \
+	applications/clawpack/advection/2d/swirl_cons/velocity_field.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/qinit.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/clawpack46_setaux.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/clawpack46_setaux_manifold.f \
