--- a/applications/clawpack/advection/2d/swirl_cons/example_map.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example_map.ini
@@ -1,12 +1,14 @@
 [user]
-    example = 1    # 1 : u(x) > 0; 2 : -1 < u(x) < 1;  3 : u(x) = constant
+    example = 3    # 1 : u(x) > 0; 2 : -1 < u(x) < 1;  3 : u(x) = constant
 
     # the edge-velocity solver is the only that seems to be conservative with non-periodic
     # boundary conditions
     rp-solver = 4    # 1-QS; 2-WD; 3=EC; 4=FW
-    mapping = 1      # 0-no map;  1-cart;  2-fivepatch; 3-bilinear
+    mapping = 3      # 0-no map;  1-cart;  2-fivepatch; 3-bilinear
 
     alpha = 0.5   # For five patch mapping
+
+    center = 0.005 0.3   # Center for bilinear mapping
 
 [clawpatch]
     # Grid dimensions
@@ -23,8 +25,8 @@
     # Dynamic gridding parameters     
     # ---------------------------
 
-    minlevel = 1         # Minimum level
-    maxlevel = 2        # Maximum levels of refinement
+    minlevel = 0         # Minimum level
+    maxlevel = 0        # Maximum levels of refinement
 
     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
     refine_threshold = 0.5
@@ -86,8 +88,8 @@
     # Mapping
     # -------
 
-    mi = 1
-    mj = 1
+    mi = 2
+    mj = 2
 
     # manifold == F
     # Domain dimensions
@@ -109,7 +111,7 @@
     init_ghostcell = F
 
 [clawpack46]
-    order  = 2 2         # normal and transverse order
+    order  = 1 0         # normal and transverse order
     mcapa = 3            # mcapa
     src_term = 0         # src_term
 
