--- a/applications/clawpack/advection/2d/swirl_cons/example_map.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example_map.ini
@@ -8,7 +8,7 @@
 
     alpha = 0.5   # For five patch mapping
 
-    center = 0.005 0.3   # Center for bilinear mapping
+    center = -0.4 0.3   # Center for bilinear mapping (keep away from edge)
 
 [clawpatch]
     # Grid dimensions
@@ -16,7 +16,6 @@
     my = 8            # my_leaf
     mbc = 2           # Number of ghost cells
     maux = 9
-
     # Equations and boundary conditions
     meqn = 1             # Number of equations
 
@@ -25,37 +24,37 @@
     # Dynamic gridding parameters     
     # ---------------------------
 
-    minlevel = 0         # Minimum level
-    maxlevel = 0        # Maximum levels of refinement
+    minlevel = 2         # Minimum level
+    maxlevel = 5        # Maximum levels of refinement
 
-    regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+    regrid_interval = 3  # Regrid every 'regrid_interval' time steps.
     refine_threshold = 0.5
     coarsen_threshold = 0.25
 
-    smooth-refine = F
-    refine-level = 5
+    smooth-refine = T
+    refine-level = 4
     # --------------
     # Time stepping
     # --------------
     tfinal = 0.5         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     
-    initial_dt = 0.02    # Initial time step for 'minlevel'
+    initial_dt = 2.5e-3    # Initial time step for 'minlevel'
     max_cfl = 1.0        # maximum cfl
     desired_cfl = 0.9    # desired cfl
 
-    nout  = 5           # Number of output times
+    nout  = 10           # Number of output times
 
     outstyle = 3         # OutputStyle = 1,2,3
 
     subcycle = F      # subcycle in time ( = T or F).
 
     # if subcycle = F
-    advance-one-step = T  # Return after complete cycle
+    advance-one-step = F  # Return after complete cycle
 
     # if outstyle == 3
     nstep = 1            # Only used if outstyle is 3
-    outstyle-uses-maxlevel = T
+    outstyle-uses-maxlevel = F
 
 
     time-sync = T    # Include conservation fix
@@ -108,10 +107,10 @@
     periodic_x = T
     periodic_y = T
 
-    init_ghostcell = F
+    init_ghostcell = T
 
 [clawpack46]
-    order  = 1 0         # normal and transverse order
+    order  = 2 2         # normal and transverse order
     mcapa = 3            # mcapa
     src_term = 0         # src_term
 
