--- a/Makefile.apps
+++ b/Makefile.apps
@@ -13,6 +13,7 @@ include src/solvers/fc2d_clawpack5/Makefile.am
 
 ## examples
 include applications/clawpack/clawpack.apps
+include applications/cudaclaw/cudaclaw.apps
 
 endif
 
@@ -72,7 +73,11 @@ if FCLAW_ENABLE_ASH3D
 
 endif
 
+if FCLAW_ENABLE_CUDACLAW
 
+include src/solvers/fc2d_cudaclaw5/Makefile.am
+
+endif
 # Include examples that use the low-level interface to p4est
 # They should always compile
 
