(swirlcons) Update Matlab/ini files

--- a/applications/clawpack/advection/2d/swirl_cons/example_map.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example_map.ini
@@ -4,11 +4,11 @@
     # the edge-velocity solver is the only that seems to be conservative with non-periodic
     # boundary conditions
     rp-solver = 4    # 1-QS; 2-WD; 3=EC; 4=FW
-    mapping = 3      # 0-no map;  1-cart;  2-fivepatch; 3-bilinear
+    mapping = 2      # 0-no map;  1-cart;  2-fivepatch; 3-bilinear; 
 
-    alpha = 0.5   # For five patch mapping
+    alpha = 0.25   # For five patch mapping
 
-    center = -0.4 0.3   # Center for bilinear mapping (keep away from edge)
+    center = 0.311 -0.411   # Center for bilinear mapping (keep away from edge)
 
 [clawpatch]
     # Grid dimensions
@@ -24,10 +24,10 @@
     # Dynamic gridding parameters     
     # ---------------------------
 
-    minlevel = 2         # Minimum level
-    maxlevel = 5        # Maximum levels of refinement
+    minlevel = 1         # Minimum level
+    maxlevel = 1        # Maximum levels of refinement
 
-    regrid_interval = 3  # Regrid every 'regrid_interval' time steps.
+    regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
     refine_threshold = 0.5
     coarsen_threshold = 0.25
 
@@ -36,18 +36,18 @@
     # --------------
     # Time stepping
     # --------------
-    tfinal = 0.5         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
+    tfinal = 1.0         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     
-    initial_dt = 2.5e-3    # Initial time step for 'minlevel'
+    initial_dt = 4e-3    # Initial time step for 'minlevel'
     max_cfl = 1.0        # maximum cfl
     desired_cfl = 0.9    # desired cfl
 
-    nout  = 10           # Number of output times
+    nout  = 5           # Number of output times
 
     outstyle = 3         # OutputStyle = 1,2,3
 
-    subcycle = F      # subcycle in time ( = T or F).
+    subcycle = T      # subcycle in time ( = T or F).
 
     # if subcycle = F
     advance-one-step = F  # Return after complete cycle
@@ -93,12 +93,12 @@
     # manifold == F
     # Domain dimensions
     ax = 0
-    bx = 1
+    bx = 2
     ay = 0
     by = 1
 
     # manifold == T 
-    manifold = T         
+    manifold = T        
 
     # manifold == T : Shift/scale box in [-1,1]x[-1,1] to [0,1]x[0,1]
     scale = 0.5 0.5 0
@@ -110,13 +110,13 @@
     init_ghostcell = T
 
 [clawpack46]
-    order  = 2 2         # normal and transverse order
+    order  = 1 0         # normal and transverse order
     mcapa = 3            # mcapa
     src_term = 0         # src_term
 
     mwaves = 1           # mwaves
     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
-    mthbc = 2 2 2 2      # mthbc (=left,right,bottom,top)
+    mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
     # output
     ascii-out = T
