--- a/applications/clawpack/advection/2d/swirl_cons/example_nomap.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example_nomap.ini
@@ -1,10 +1,10 @@
 [user]
-    example = 1 
+    example = 3 
 
     # the edge-velocity solver is the only that seems to be conservative with non-periodic
     # boundary conditions
     rp-solver = 4    # 1-QS; 2-WD; 3=EC; 4=FW
-    mapping = 0      # 0-no map;  1-cart;  2-fivepatch
+    mapping = 2      # 0-no map;  1-cart;  2-pillowgrid
 
     alpha = 0.5
 
@@ -24,7 +24,7 @@
     # ---------------------------
 
     minlevel = 0         # Minimum level
-    maxlevel = 1        # Maximum levels of refinement
+    maxlevel = 0        # Maximum levels of refinement
 
     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
     refine_threshold = 1.5
@@ -39,7 +39,7 @@
     tfinal = 0.5         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     
-    initial_dt = 0.02    # Initial time step for 'minlevel'
+    initial_dt = 0.01    # Initial time step for 'minlevel'
     max_cfl = 1.0        # maximum cfl
     desired_cfl = 0.9    # desired cfl
 
@@ -89,11 +89,11 @@
     manifold = F         # Manifold
 
     mi = 2
-    mj = 2
+    mj = 1
 
     # Domain dimensions - used only if manifold = F
     ax = 0
-    bx = 1
+    bx = 2
     ay = 0
     by = 1
 
