--- a/applications/clawpack/advection/2d/swirl_cons/example_map.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example_map.ini
@@ -8,7 +8,7 @@
 
     alpha = 0.25   # For five patch mapping
 
-    center = 0.311 -0.411   # Center for bilinear mapping (keep away from edge)
+    center = 0.3 -0.4   # Center for bilinear mapping (keep away from edge)
 
 [clawpatch]
     # Grid dimensions
@@ -24,14 +24,14 @@
     # Dynamic gridding parameters     
     # ---------------------------
 
-    minlevel = 1         # Minimum level
-    maxlevel = 1        # Maximum levels of refinement
+    minlevel = 0         # Minimum level
+    maxlevel = 4        # Maximum levels of refinement
 
     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-    refine_threshold = 0.5
+    refine_threshold = 0.75
     coarsen_threshold = 0.25
 
-    smooth-refine = T
+    smooth-refine = F
     refine-level = 4
     # --------------
     # Time stepping
@@ -39,7 +39,7 @@
     tfinal = 1.0         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     
-    initial_dt = 4e-3    # Initial time step for 'minlevel'
+    initial_dt = 4e-2    # Initial time step for 'minlevel'
     max_cfl = 1.0        # maximum cfl
     desired_cfl = 0.9    # desired cfl
 
@@ -110,7 +110,7 @@
     init_ghostcell = T
 
 [clawpack46]
-    order  = 1 0         # normal and transverse order
+    order  = 2 2         # normal and transverse order
     mcapa = 3            # mcapa
     src_term = 0         # src_term
 
