add cuda option in the swirl application to use the fc2d_clawpack5 lib

--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -1,8 +1,7 @@
 [user]
      claw_version = 4         # Periodicity of the flow field.
      period = 4.0
-     claw-version = 4
-
+     cuda = 1
 
 [clawpatch]
      # Grid dimensions
@@ -112,3 +111,16 @@
      vtk-out = F
 
 
+[cudaclaw5]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 2             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
