--- a/applications/clawpack/advection/2d/swirl/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl/Makefile.am
@@ -9,7 +9,7 @@ applications_clawpack_advection_2d_swirl_swirl_SOURCES = \
 	applications/clawpack/advection/2d/swirl/swirl.cpp \
 	applications/clawpack/advection/2d/swirl/psi.f \
 	applications/clawpack/advection/2d/swirl/setprob.f \
-    applications/clawpack/advection/2d/all/advection_user_fort.h \
+        applications/clawpack/advection/2d/all/advection_user_fort.h \
 	applications/clawpack/advection/2d/all/clawpack46_setaux.f \
 	applications/clawpack/advection/2d/all/clawpack5_setaux.f90 \
 	applications/clawpack/advection/2d/all/clawpack46_rpn2adv.f \
@@ -19,7 +19,9 @@ applications_clawpack_advection_2d_swirl_swirl_SOURCES = \
 	applications/clawpack/advection/2d/swirl/user_4.6/qinit.f \
 	applications/clawpack/advection/2d/swirl/user_4.6/b4step2.f \
 	applications/clawpack/advection/2d/swirl/user_5.0/qinit.f90 \
-	applications/clawpack/advection/2d/swirl/user_5.0/b4step2.f90
+	applications/clawpack/advection/2d/swirl/user_5.0/b4step2.f90 \
+	applications/clawpack/advection/2d/swirl/user_cuda5.0/qinit.f90 \
+	applications/clawpack/advection/2d/swirl/user_cuda5.0/b4step2.f90
 
 EXTRA_DIST += \
 	applications/clawpack/advection/2d/swirl/fclaw_options.ini \
@@ -36,6 +38,7 @@ applications_clawpack_advection_2d_swirl_swirl_CPPFLAGS = \
         $(AM_CPPFLAGS) \
         $(FCLAW_CLAWPACK46_CPPFLAGS) \
         $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CUDACLAW5_CPPFLAGS) \
         $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 
@@ -43,5 +46,6 @@ applications_clawpack_advection_2d_swirl_swirl_LDADD = \
         $(LDADD) \
         $(FCLAW_CLAWPACK46_LDADD) \
         $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CUDACLAW5_LDADD) \
         $(FCLAW_CLAWPATCH_LDADD) \
         $(FCLAW_LDADD)
