(cudaclaw5) WIP : Write .cu version of step2_wrap (doesn't yet owork)

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -48,7 +48,7 @@
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = essential        
+     verbosity = production        
      output = T
 
      # -----------
