(cudaclaw) Use fixed size time step for comparison with CPU code

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -33,14 +33,14 @@
      # --------------
      tfinal = 4.0         #  Final time
 
-     use_fixed_dt = F     # Take a fixed time step
+     use_fixed_dt = T     # Take a fixed time step
      initial_dt = 0.005   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3
+     outstyle = 3         # OutputStyle = 1,2,3
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
