(swirlcons) Udpate Matlab/ini files

--- a/applications/clawpack/advection/2d/swirl_cons/example_map.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example_map.ini
@@ -4,11 +4,11 @@
     # the edge-velocity solver is the only that seems to be conservative with non-periodic
     # boundary conditions
     rp-solver = 4    # 1-QS; 2-WD; 3=EC; 4=FW
-    mapping = 2      # 0-no map;  1-cart;  2-fivepatch; 3-bilinear; 
+    mapping = 3      # 0-no map;  1-cart;  2-fivepatch; 3-bilinear; 
 
     alpha = 0.4   # For five patch mapping
 
-    center = 0.3 -0.4   # Center for bilinear mapping (keep away from edge)
+    center = 0.0 0.0   # Center for bilinear mapping (keep away from edge)
 
 [clawpatch]
     # Grid dimensions
@@ -25,7 +25,7 @@
     # ---------------------------
 
     minlevel = 0         # Minimum level
-    maxlevel = 4        # Maximum levels of refinement
+    maxlevel = 1        # Maximum levels of refinement
 
     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
     refine_threshold = 1.5
@@ -39,22 +39,22 @@
     tfinal = 1.0         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     
-    initial_dt = 5e-3    # Initial time step for 'minlevel'
-    max_cfl = 0.5        # maximum cfl
-    desired_cfl = 0.495    # desired cfl
+    initial_dt = 2e-2    # Initial time step for 'minlevel'
+    max_cfl = 1.0        # maximum cfl
+    desired_cfl = 0.9    # desired cfl
 
     nout  = 5           # Number of output times
 
     outstyle = 3         # OutputStyle = 1,2,3
 
-    subcycle = T      # subcycle in time ( = T or F).
+    subcycle = F      # subcycle in time ( = T or F).
 
     # if subcycle = F
-    advance-one-step = F  # Return after complete cycle
+    advance-one-step = T  # Return after complete cycle
 
     # if outstyle == 3
     nstep = 1            # Only used if outstyle is 3
-    outstyle-uses-maxlevel = F
+    outstyle-uses-maxlevel = T
 
 
     time-sync = T    # Include conservation fix
