move the content of update_q into step2_wrap to test timing for cudamalloc

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -67,8 +67,8 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
-     report-timing=F
-     report-timing-verbosity=summary
+     report-timing=T
+     report-timing-verbosity=details
 
      # -------
      # Mapping
