--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -47,7 +47,7 @@
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = essential        
+     verbosity = production        
      output = T
 
      # -----------
@@ -67,6 +67,7 @@
      run-user-diagnostics = F
      compute-error = F
      report-timing=T
+     report-timing-verbosity=details    # To get cuda details
 
      # -------
      # Mapping
@@ -117,7 +118,7 @@
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
      # output
