--- a/src/solvers/fc2d_cudaclaw5/Makefile.am
+++ b/src/solvers/fc2d_cudaclaw5/Makefile.am
@@ -24,7 +24,8 @@ libcudaclaw5_compiled_sources = \
 	src/solvers/fc2d_cudaclaw5/fortran_source/cudaclaw5_update_q.f \
 	src/solvers/fc2d_cudaclaw5/cuda_source/cudaclaw5_update_q.cu \
 	src/solvers/fc2d_cudaclaw5/cuda_source/cudaclaw5_step2.cu \
-	src/solvers/fc2d_cudaclaw5/cuda_source/cudaclaw5_allocate.cu
+	src/solvers/fc2d_cudaclaw5/cuda_source/cudaclaw5_allocate.cu \
+	src/solvers/fc2d_cudaclaw5/cuda_source/cudaclaw5_flux2.cu
 
 ## Name of library to build
 lib_LTLIBRARIES += src/solvers/fc2d_cudaclaw5/libcudaclaw5.la
