WIP : Working more on update in CUDA

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -8,7 +8,7 @@
      mx = 32		      # mx_leaf
      my = 32              # my_leaf
      mbc = 2              # Number of ghost cells
-     maux = 3
+     maux = 2
 
      # Equations and boundary conditions
      meqn = 1             # Number of equations
@@ -40,7 +40,7 @@
 
      outstyle = 3         # OutputStyle = 1,2,3
 
-     nout = 20            # Used for all three out styles;  has different meaning, though.
+     nout = 50            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -67,7 +67,7 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
-     report-timing=T
+     report-timing=F
      report-timing-verbosity=details
 
      # -------
@@ -85,7 +85,6 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 2             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
@@ -98,9 +97,8 @@
 
 
 [clawpack5]
-     order  = 2 2         # normal and transverse order
+     order  = 1 0         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 2             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
@@ -115,7 +113,6 @@
 [cudaclaw5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 2             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
