(cudaclaw/swirl) Revert to original b4step2

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -5,8 +5,8 @@
 
 [clawpatch]
      # Grid dimensions
-     mx = 32		      # mx_leaf
-     my = 32              # my_leaf
+     mx = 128		      # mx_leaf
+     my = 128              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 2
 
@@ -67,8 +67,8 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
-     report-timing=F
-     report-timing-verbosity=details
+     report-timing=T
+     report-timing-verbosity=extra
 
      # -------
      # Mapping
