(cudaclaw5/swirl) Update .ini files

--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -4,10 +4,10 @@
 
 [clawpatch]
      # Grid dimensions
-     mx = 8		      # mx_leaf
-     my = 8              # my_leaf
+     mx = 32		      # mx_leaf
+     my = 32              # my_leaf
      mbc = 2              # Number of ghost cells
-     maux = 3
+     maux = 2
 
      # Equations and boundary conditions
      meqn = 1             # Number of equations
@@ -17,8 +17,8 @@
      # Dynamic gridding parameters     
      # ---------------------------
 
-     minlevel = 5         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -32,8 +32,8 @@
      # --------------
      tfinal = 4.0         #  Final time
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.005   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 2.5e-2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
