--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -5,8 +5,8 @@
 
 [clawpatch]
      # Grid dimensions
-     mx = 128		      # mx_leaf
-     my = 128              # my_leaf
+     mx = 32		      # mx_leaf
+     my = 32              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 2
 
@@ -18,8 +18,8 @@
      # Dynamic gridding parameters     
      # ---------------------------
 
-     minlevel = 0         # Minimum level
-     maxlevel = 0         # Maximum levels of refinement
+     minlevel = 4         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
 
      regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -34,7 +34,7 @@
      tfinal = 4.0         #  Final time
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 0.005   # Initial time step for 'minlevel'
+     initial_dt = 1e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
