--- a/applications/clawpack/advection/2d/swirl/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl/Makefile.am
@@ -21,7 +21,9 @@ applications_clawpack_advection_2d_swirl_swirl_SOURCES = \
 	applications/clawpack/advection/2d/swirl/user_5.0/qinit.f90 \
 	applications/clawpack/advection/2d/swirl/user_5.0/b4step2.f90 \
 	applications/clawpack/advection/2d/swirl/user_cuda5.0/qinit.f90 \
-	applications/clawpack/advection/2d/swirl/user_cuda5.0/b4step2.f90
+	applications/clawpack/advection/2d/swirl/user_cuda5.0/b4step2.f90 \
+	applications/clawpack/advection/2d/swirl/user_cuda5.0/rpn2adv.cu
+
 
 EXTRA_DIST += \
 	applications/clawpack/advection/2d/swirl/fclaw_options.ini \
