Cuda device link now works

--- a/applications/clawpack/advection/2d/swirl/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl/Makefile.am
@@ -50,4 +50,10 @@ applications_clawpack_advection_2d_swirl_swirl_LDADD = \
         $(FCLAW_CLAWPACK5_LDADD) \
         $(FCLAW_CUDACLAW5_LDADD) \
         $(FCLAW_CLAWPATCH_LDADD) \
-        $(FCLAW_LDADD)
+        $(FCLAW_LDADD) \
+		applications/clawpack/advection/2d/swirl/user_cuda5.0/devicelink.o 
+
+## nvcc -dlink has to b called after everything for the executable has been compiled.
+## this generates a single object file with all of the linked  device code.
+applications/clawpack/advection/2d/swirl/user_cuda5.0/devicelink.o : applications/clawpack/advection/2d/swirl/user_cuda5.0/rpn2adv.o src/solvers/fc2d_cudaclaw5/libcudaclaw5.la
+		$(NVCC) -dlink  applications/clawpack/advection/2d/swirl/user_cuda5.0/rpn2adv.o src/solvers/fc2d_cudaclaw5/.libs/libcudaclaw5.a -o applications/clawpack/advection/2d/swirl/user_cuda5.0/devicelink.o 
