(cudaclaw/swirl) Suppress timing reports

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -67,8 +67,8 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
-     report-timing=T
-     report-timing-verbosity=extra
+     report-timing=F
+     report-timing-verbosity=summary
 
      # -------
      # Mapping
