add cuda to acoustics; linkage fails

--- a/applications/clawpack/acoustics/2d/radial/fclaw_options.ini
+++ b/applications/clawpack/acoustics/2d/radial/fclaw_options.ini
@@ -1,6 +1,7 @@
 [user]
      example = 0
-     claw-version = 4
+
+     cuda = 1
 
      rho = 1
      bulk = 4
@@ -20,7 +21,7 @@
 
      # Regridding information
      minlevel = 3               # Minimum level
-     maxlevel = 7               # Maximum levels of refinement
+     maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.25
@@ -32,7 +33,7 @@
      tfinal = 1.0
      initial_dt = 0.01    # Initial time step for 'minlevel'
 
-     use_fixed_dt = F     # Take a fixed time step
+     use_fixed_dt = T     # Take a fixed time step
      max_cfl = 1.0
      desired_cfl = 0.9
 
@@ -55,12 +56,16 @@
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
 
-# Debugging and diagnostics
-     trapfpe = T
-     mpi_debug = F
+     # -------------------------
+     # Diagnostics and debugging
+     # -------------------------
+     trapfpe = T                 # Trap floating point errors.
+     mpi_debug = F               # Attach mpi processes in gdb
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
+     report-timing=T
+     report-timing-verbosity=extra    # To get cuda details
 
 # Mapping and topology
      manifold = F         # Manifold
@@ -85,7 +90,7 @@
      vtk-out = F
 
 [clawpack5]
-     order  = 2 2       # normal and transverse order
+     order  = 1 0
      mcapa = 0          # mcapa
      src_term = 0       # src_term
 
@@ -97,3 +102,17 @@
      ascii-out = T
      vtk-out = F
 
+
+[cudaclaw5]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
