--- a/Makefile.apps
+++ b/Makefile.apps
@@ -87,6 +87,7 @@ include src/solvers/fc2d_clawpack5/Makefile.am
 include src/solvers/fc2d_cudaclaw5/Makefile.am
 
 include applications/clawpack/advection/2d/swirl/Makefile.am
+#include applications/clawpack/shallow/2d/radialdam/Makefile.am
 
 
 endif
