--- a/applications/clawpack/shallow/2d/radialdam/Makefile.am
+++ b/applications/clawpack/shallow/2d/radialdam/Makefile.am
@@ -35,11 +35,13 @@ applications_clawpack_shallow_2d_radialdam_radialdam_CPPFLAGS = \
         $(AM_CPPFLAGS) \
         $(FCLAW_CLAWPACK46_CPPFLAGS) \
         $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CUDACLAW5_CPPFLAGS) \
         $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 applications_clawpack_shallow_2d_radialdam_radialdam_LDADD = \
         $(LDADD) \
         $(FCLAW_CLAWPACK46_LDADD) \
         $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CUDACLAW5_LDADD) \
         $(FCLAW_CLAWPATCH_LDADD) \
         $(FCLAW_LDADD)
