(swirl) Update clawpack 5 normal Riemann solver to handle meqn > 1

--- a/applications/clawpack/advection/2d/swirl/cuda.ini
+++ b/applications/clawpack/advection/2d/swirl/cuda.ini
@@ -40,7 +40,7 @@
 
      outstyle = 3         # OutputStyle = 1,2,3
 
-     nout = 50            # Used for all three out styles;  has different meaning, though.
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -49,7 +49,7 @@
      # File and console IO
      # -------------------
      verbosity = production        
-     output = T
+     output = F
 
      # -----------
      # Tikz output 
@@ -67,8 +67,8 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
-     report-timing=F
-     report-timing-verbosity=summary
+     report-timing=T
+     report-timing-verbosity=details
 
      # -------
      # Mapping
