(cudaclaw/acoustics/radial) Update Riemann solver for  CUDA

--- a/applications/clawpack/acoustics/2d/radial/fclaw_options.ini
+++ b/applications/clawpack/acoustics/2d/radial/fclaw_options.ini
@@ -44,7 +44,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = essential    # verbose
+     verbosity = production    # verbose
      output = T               # See clawpack options, below
      report-timing = T
 
