(cudaclaw/swirl) Update for use with cudaclaw

--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -109,7 +109,7 @@
      vtk-out = F
 
 
-[cudaclaw5]
+[cudaclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      src_term = 0         # src_term
