add nvtx profiler; fix batch_size always = 1

--- a/src/solvers/fc2d_cudaclaw/Makefile.am
+++ b/src/solvers/fc2d_cudaclaw/Makefile.am
@@ -22,6 +22,7 @@ libcudaclaw_compiled_sources = \
 	src/solvers/fc2d_cudaclaw/cuda_source/cudaclaw_step2.cu \
 	src/solvers/fc2d_cudaclaw/cuda_source/cudaclaw_allocate.cu \
 	src/solvers/fc2d_cudaclaw/cuda_source/cudaclaw_flux2.cu \
+	src/solvers/fc2d_cudaclaw/fc2d_cuda_profiler.cu \
 	src/solvers/fc2d_cudaclaw/cuda_source/cudaclaw_store_patches.cu
 
 
